# workspace-blank

./: pyproject.toml
src/sentence_embedder/: __main__.py  app.py  model_downloader.py
tests/: test_app.py  test_model_downloader.py  test_sentence_embedder.py
