[project]
name = "sentence-embedder-service"
version = "0.1.0"
requires-python = ">=3.11"
description = "A service for sentence embedders to be used in RAG applications."
dependencies = [
    "transformers>=4.9.2",
    "torch>=1.9.0",
    "uvicorn>=0.15.0",
    "fastapi>=0.68.0",
    "httpx>=0.28.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentence_embedder"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[project.scripts]
sentence_embedder_service = "sentence_embedder.main:app"
